<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@drawable/img"
    tools:context=".SignUpActivity">
    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:maxLength="100"
        android:textColor="@color/black"
        android:background="@drawable/ic_email"/>
    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:maxLength="100"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_email"/>
    <EditText
        android:id="@+id/edConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:maxLength="100"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_email"/>
    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="30dp"/>
</LinearLayout>