<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_while_conner_16"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@drawable/bg_yellow_conner_16_top_left_top_right"
        android:text="@string/forgot_password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_tv"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/bg_while_conner_10_border_gray"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/btnNoThank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_thanks"
            android:textSize="14sp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_gray_conner_10"
            android:alpha="0.4"/>
        <Button
            android:id="@+id/btnSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            android:textSize="14sp"
            android:background="@drawable/bg_yellow_conner_10"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>